[gd_scene load_steps=3 format=3 uid="uid://cvonc45vghlgr"]

[ext_resource type="Script" uid="uid://cgf26drh2oydm" path="res://scripts/hud.gd" id="1_oo0fn"]
[ext_resource type="Theme" uid="uid://bi8os3cbyikl7" path="res://main-theme.tres" id="2_oo0fn"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 171.0
offset_bottom = 120.0
theme = ExtResource("2_oo0fn")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_oo0fn")
theme_override_font_sizes/font_size = 128
text = "Game Over!"

[node name="HighScoreLabel" type="Label" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -490.0
offset_top = 20.0
offset_right = -21.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
